language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_print_aliased_imported_generic_type.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport gleam/option.{type Option as Maybe}\n\nconst none: Maybe(Int) = option.None\n"
---

import gleam/option.{type Option as Maybe}

const none: Maybe(Int) = option.None
▔▔▔▔▔▔▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔▔              


----- Hover content (markdown) -----
```gleam
Maybe(Int)
```
