language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_print_imported_alias.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport aliases.{type Aliased}\nconst thing: Aliased = 10\n"
---

import aliases.{type Aliased}
const thing: Aliased = 10
▔▔▔▔▔▔▔▔▔▔↑▔▔▔▔▔▔▔▔▔     


----- Hover content (markdown) -----
```gleam
Aliased
```
