language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_print_qualified_prelude_type_when_shadowed_by_alias.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype Result = #(Bool, String)\nconst ok = Ok(10)\n"
---

type Result = #(Bool, String)
const ok = Ok(10)
▔▔▔▔▔▔▔↑         


----- Hover content (markdown) -----
```gleam
gleam.Result(Int, a)
```
