language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_print_type_variable_names.snap
---
source: language-server/src/tests/hover.rs
expression: "\nfn main(value: Result(ok, error)) {\n  let v = value\n  v\n}\n"
---

fn main(value: Result(ok, error)) {
  let v = value
      ↑        
  v
}


----- Hover content (markdown) -----
```gleam
Result(ok, error)
```
