language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_print_unbound_type_variable_name_without_conflicts.snap
---
source: language-server/src/tests/hover.rs
expression: "\nfn make_ok(value: a) {\n  let result = Ok(value)\n  result\n}\n"
---

fn make_ok(value: a) {
  let result = Ok(value)
      ▔▔↑▔▔▔            
  result
}


----- Hover content (markdown) -----
```gleam
Result(a, b)
```
