language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_print_unbound_type_variable_names.snap
---
source: language-server/src/tests/hover.rs
expression: "\nfn make_ok(value: some_type) {\n  let result = Ok(value)\n  result\n}\n"
---

fn make_ok(value: some_type) {
  let result = Ok(value)
      ▔▔↑▔▔▔            
  result
}


----- Hover content (markdown) -----
```gleam
Result(some_type, a)
```
