language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_print_underlying_for_alias_with_parameters.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype LocalResult = Result(String, Int)\n\nfn do_thing() -> LocalResult {\n  Error(1)\n}\n"
---

type LocalResult = Result(String, Int)

fn do_thing() -> LocalResult {
▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  
  Error(1)
}


----- Hover content (markdown) -----
```gleam
fn() -> LocalResult
```
