language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_print_underlying_for_imported_alias.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport alias.{type A}\n\nfn wibble() -> Result(Int, String) {\n  todo\n}\n"
---

import alias.{type A}

fn wibble() -> Result(Int, String) {
▔▔▔▔▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  
  todo
}


----- Hover content (markdown) -----
```gleam
fn() -> A
```
