language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_shadowed_prelude_type.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype Int { Int }\nconst number = 100\n"
---

type Int { Int }
const number = 100
▔▔▔▔▔▔▔▔▔↑▔▔      


----- Hover content (markdown) -----
```gleam
gleam.Int
```
