language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_shadowed_prelude_type_imported.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport numbers.{type Int}\nconst number = 100\n"
---

import numbers.{type Int}
const number = 100
▔▔▔▔▔▔▔▔▔↑▔▔      


----- Hover content (markdown) -----
```gleam
gleam.Int
```
