language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_type_alias_annotation.snap
---
source: language-server/src/tests/hover.rs
expression: type Wibble = Int
---
type Wibble = Int
              ▔↑▔


----- Hover content (markdown) -----
```gleam
gleam.Int
```
